--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kiranjith Hardeep</title>
+    <title>Sreelekshmi S</title>
+    
   </head>
   <body>
     <div id="root"></div>
